# A1-Python

./: .gitignore  Oscilloscope_measurements.numbers  Plasma Treatment.numbers  README.md  Spectrometer Results.numbers  Spectrometer Results.xlsx  main.py  phase_shifts.txt  pyproject.toml  requirements.txt
Data Files/: scope_a1_0.csv
Graphs/: Scribbles.xlsx
data/: scope_a1_1.csv  scope_a1_oxy_00.txt  scope_a1_oxy_01.csv  scope_a1_oxy_01.txt  scope_a1_oxy_02.csv  scope_a1_oxy_02.txt  scope_a1_oxy_10.csv  scope_a1_oxy_102.csv  scope_a1_oxy_11.csv  scope_a1_oxy_11.txt  scope_a1_oxy_12.csv  scope_a1_oxy_21.csv  scope_a1_oxy_21.txt  scope_a1_oxy_22.txt  scope_a1_oxy_30.csv  scope_a1_oxy_30.txt  scope_a1_oxy_32.csv  scope_a1_oxy_32.txt  scope_a1_oxy_40.txt  scope_a1_oxy_41.csv  scope_a1_oxy_41.txt  scope_a1_oxy_52.txt  scope_a1_oxy_70.csv  scope_a1_oxy_70.txt  scope_a1_oxy_72.csv  scope_a1_oxy_81.csv  scope_a1_oxy_81.txt  scope_a1_oxy_82.csv  scope_a1_oxy_82.txt  scope_a1_oxy_90.csv  scope_a1_oxy_90.txt  scope_a1_pw2_00.csv  scope_a1_pw2_01.txt  scope_a1_pw2_03.txt  scope_a1_pw2_04.txt  scope_a1_pw2_10.csv  scope_a1_pw2_10.txt  scope_a1_pw2_13.csv  scope_a1_pw2_13.txt  scope_a1_pw2_20.csv  (+28 more)
data/Attension Data/: Sample 1 Treated.xls  Sample 1.xls  Sample 2.xls  Sample 5.xls  csg524 Sample 1 Measurement 1.csv  csg524 Sample 1 Measurement 2.csv  csg524 Sample 1 Measurement 3.csv  csg524 Sample 1 Measurement 4.csv  csg524 Sample 1 Measurement 5.csv  (+25 more)
modules/: cvs_tools.py  fit_data.py  load_data.py  plot_data.py  power_deposition.py  save_data.py
(+90 files in other folders)
