[tool.poetry]
name = "a1 python"
version = "0.1.0"
description = ""
authors = ["csg524 <csg524@york.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astroid = "2.15.4"
dill = "0.3.6"
isort = "5.12.0"
lazy-object-proxy = "1.9.0"
mccabe = "0.7.0"
mypy = "1.3.0"
mypy-extensions = "1.0.0"
platformdirs = "3.5.1"
pylint = "2.17.4"
tomlkit = "0.11.8"
typing-extensions = "4.5.0"
wrapt = "1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
