[tool.poetry]
name = "A1-Python"
version = "0.1.0"
description = "Package made for A1 Plasma Processing of Materials third year lab experiment at the University of York, UK"
authors = ["csg524 <csg524@york.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
astroid = "2.15.4"
dill = "0.3.6"
isort = "5.12.0"
lazy-object-proxy = "1.9.0"
mccabe = "0.7.0"
mypy = "1.3.0"
mypy-extensions = "1.0.0"
platformdirs = "3.5.1"
pylint = "2.17.4"
tomlkit = "0.11.8"
typing-extensions = "4.5.0"
wrapt = "1.15.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
